# job-application-agent

./: .env.example  .gitignore  ARCHIVE.md  FUTURE.md  GRAPH_DB_ALTERNATIVES.md  LICENSE.md  README.md  applications  change-log.md  config.py  go-claude.sh  go-ollama.sh  main.py  mcp_config.json  pyproject.toml  test_example.py
.cursor/rules/: base.mdc
docs/: ARCHITECTURE.md  CONFIG.md  DEPENDENCIES.md  USAGE.md
plans/: ats-optimization.md  langchain-integration.md  phase1-encryption-cache-management.md  phase2-application-tracking-database.md  phase2-graph-database-integration.md  phase3-resume-optimization.md  phase4-industry-analysis.md  phase4-langchain-integration.md  phase5-interview-preparation.md  phase5-web-interface.md  phase6-web-interface.md  phases-overview.md  phases-timeline.md  structured-output-parsing.md
src/: __init__.py  analytics_dashboard.py  analyzer.py  ats_analyzer.py  ats_models.py  cache.py  career_analytics_models.py  career_progression_tracker.py  database_manager.py  database_schema.py  encryption.py  error_handler.py  fallback_mcp_server.py  file_parser.py  industry_trend_analyzer.py  langchain_analyzer.py  langchain_cache.py  langchain_entity_extractor.py  langchain_llm_wrapper.py  langchain_observability.py  langchain_rag.py  langchain_structured_parser.py  langgraph_resume_tailor.py  llm_provider.py  mcp_server.py  models.py  output.py  parsers.py  personalized_recommendation_engine.py  prompts.py  resume_scorer.py  simple_mcp_server.py  structured_parser.py
src/multi_agent/: assessment_agent.py  base_agent.py  career_advisor_agent.py  history_agent.py  (+8 more)
tests/: test_career_analytics.py  test_database.py  test_error_handler.py  test_imports.py  test_langchain_integration.py  test_models.py  test_resume_optimization.py  test_structured_parser.py
