[project]
name = "job-application-agent"
version = "0.1.0"
description = "AI agent to review and assess fitness for posted job description."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.39.0",  # Claude API
    "requests>=2.32.0",  # HTTP requests
    "beautifulsoup4>=4.12.0",  # Web scraping
    "python-docx>=1.1.0",  # Word document parsing
    "rich>=13.7.0",  # Beautiful CLI output
    "python-dotenv>=1.0.0",  # Environment variable management
    "mcp>=1.0.0",  # Model Context Protocol
]

[project.scripts]
job-agent = "main:main"
